--- a/uniapp-1/package.json
+++ b/uniapp-1/package.json
@@ -40,6 +40,7 @@
     "@dcloudio/uni-app-plus": "3.0.0-4020920240930001",
     "@dcloudio/uni-components": "3.0.0-4020920240930001",
     "@dcloudio/uni-h5": "3.0.0-4020920240930001",
+    "@dcloudio/uni-helper-json": "^1.0.13",
     "@dcloudio/uni-mp-alipay": "3.0.0-4020920240930001",
     "@dcloudio/uni-mp-baidu": "3.0.0-4020920240930001",
     "@dcloudio/uni-mp-jd": "3.0.0-4020920240930001",
@@ -59,8 +60,11 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4020920240930001",
     "@dcloudio/uni-stacktracey": "3.0.0-4020920240930001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020920240930001",
-    "@vue/tsconfig": "^0.1.3",
+    "@types/html5plus": "^1.0.5",
+    "@types/uni-app": "^1.4.8",
     "@vue/runtime-core": "^3.4.21",
+    "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.80.7",
     "typescript": "^4.9.4",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
